; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_error.c_libvlc_threads_init.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_error.c_libvlc_threads_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lock = common dso_local global i32 0, align 4
@refs = common dso_local global i32 0, align 4
@context = common dso_local global i32 0, align 4
@free_msg = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @libvlc_threads_init() #0 {
  %1 = call i32 @vlc_mutex_lock(i32* @lock)
  %2 = load i32, i32* @refs, align 4
  %3 = add nsw i32 %2, 1
  store i32 %3, i32* @refs, align 4
  %4 = icmp eq i32 %2, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @free_msg, align 4
  %7 = call i32 @vlc_threadvar_create(i32* @context, i32 %6)
  br label %8

8:                                                ; preds = %5, %0
  %9 = call i32 @vlc_mutex_unlock(i32* @lock)
  ret void
}

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @vlc_threadvar_create(i32*, i32) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
